// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App element produces output containing page 1`] = `
<div
  className="ElApp MuiBox-root css-3j596c"
  id="app1"
>
  <div
    className="MuiBox-root css-72fd9l"
  />
  <div
    className="MuiBox-root css-zi2l0h"
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg css-vn2rje-MuiContainer-root"
    >
      <div
        className="css-1b8j02i-MuiStack-root"
        id="app1.page1"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          id="app1.page1.para1"
        >
          Hello
          where are you
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-72fd9l"
  />
</div>
`;

exports[`App element produces output containing page and additional components with app bar at the top 1`] = `
<div
  className="ElApp MuiBox-root css-3j596c"
  id="app1"
>
  <div
    className="MuiBox-root css-72fd9l"
  >
    <header
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-hip9hq-MuiPaper-root-MuiAppBar-root"
      id="app1.appBar1"
    >
      <div
        className="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-10ltm04-MuiToolbar-root"
      >
        <div
          className="css-y5np4p-MuiStack-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            The App bar
          </div>
        </div>
      </div>
    </header>
  </div>
  <div
    className="MuiBox-root css-zi2l0h"
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg css-vn2rje-MuiContainer-root"
    >
      <div
        className="css-1b8j02i-MuiStack-root"
        id="app1.page1"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          id="app1.page1.para1"
        >
          Hello
          where are you
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-72fd9l"
  >
    <div
      id="app1.coll1"
    >
      <div>
        app1.coll1
      </div>
      <code>
        {}
      </code>
    </div>
    <div
      id="app1.coll2"
    >
      <div>
        app1.coll2
      </div>
      <code>
        {}
      </code>
    </div>
  </div>
</div>
`;

exports[`App element produces output with max width 1`] = `
<div
  className="ElApp MuiBox-root css-3j596c"
  id="app1"
>
  <div
    className="MuiBox-root css-72fd9l"
  />
  <div
    className="MuiBox-root css-zi2l0h"
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg css-1lc1axi-MuiContainer-root"
    >
      <div
        className="css-1b8j02i-MuiStack-root"
        id="app1.page1"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          id="app1.page1.para1"
        >
          Hello
          where are you
        </p>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-72fd9l"
  />
</div>
`;
